latest content changes

--- a/www/index.html
+++ b/www/index.html
@@ -30,22 +30,6 @@
 
 <body class="cu-seal sidebar sidebar-right sidebar-tint secondary-page">
     <div id="skipnav"><a href="#main">Skip to main content</a></div>
-    <!--div id="cu-search" class="cu-search">
-        <div class="container-fluid">
-            <form id="cu-search-form" role="search" action="//www.cornell.edu/search/">
-                <label for="cu-search-query" class="sr-only">Search:</label>
-                <input type="text" id="cu-search-query" name="s" value="" size="30">
-                <button name="btnG" id="cu-search-submit" type="submit" value="go"><span class="sr-only">Submit Search</span></button>
-                <div class="search-filters">
-                    <h2 class="sr-only">Search Filters:</h2>
-                    <input type="radio" id="cu-search-filter1" name="sitesearch" value="thissite" checked="checked">
-                    <label for="cu-search-filter1"><span class="sr-only">Search </span>CTI Site</label>
-                    <input type="radio" id="cu-search-filter2" name="sitesearch" value="cornell">
-                    <label for="cu-search-filter2"><span class="sr-only">Search </span>Cornell</label>
-                </div>
-            </form>
-        </div>
-    </div -->
     <div id="brand" class="band">
         <header id="cu-header">
             <div class="cu45-helper"></div>
@@ -55,15 +39,6 @@
                 <div class="cu-unit">
                     <h2><a href="/"><img id='canvasAtCornellLogo' src='./images/logo/CanvasatCornellText500.png' alt='Canvas at Cornell'></a></h2>
                 </div>
-                <!-- div class="buttons">
-                    <button class="mobile-button" id="cu-search-button">Search</button>
-                    <nav id="utility-navigation" aria-label="Supplementary Navigation">
-                        <ul class="list-menu links">
-                            <li><a href="https://www.instructure.com/">About Us</a></li>
-                            <li><a href="mailto:canvas@cornell.edu">Contact Us</a></li>
-                        </ul>
-                    </nav>
-                </div -->
             </div>
             <div class="flex">
                 <div id='notification' class="container-fluid">
@@ -78,35 +53,18 @@
                     <h2 class='mobile-hidden'>Help & Support links</h2>
                     <nav class="secondary-navigation mobile-expander" aria-label="Section Navigation">
                         <div class="">
-                            <!-- ul class="menu">
-                                <li class="current-menu-ancestor current-menu-parent">
-                                    <ul class="sub-menu">
-                                        <li class="menu-item"><a href="https://community.canvaslms.com/community/answers/guides/">Search
-                                                the Canvas Guides</a></li>
-                                        <li class="menu-item"><a href="mailto:support@instructure.com">Support</a></li>
-                                        <li class="menu-item"><a href="https://teaching.cornell.edu/">Center for
-                                                Teaching Innovation</a></li>
-                                        <li class="menu-item"><a href="https://it.cornell.edu/canvas/">Blackboard to
-                                                Canvas migration </a></li>
-                                        <li class="menu-itMigratem"><a href="https://www.instructure.com/">About Canvas</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                            </ul -->
-
-
                             <ul class="menu">
                                 <li class="current-menu-ancestor current-menu-parent">
                                     <ul class="sub-menu">
-                                        <li class="menu-item menu-item--collapsed"><a href="https://community.canvaslms.com/community/answers/guides/">Help with Canvas</a></li>
-                                        <li class="menu-item menu-item--collapsed"><a href="mailto:support@instructure.com">Help designing your Canvas course</a></li>
+                                        <li class="menu-item menu-item--collapsed"><a href="https://community.canvaslms.com/community/answers/guides/">Help
+                                                with Canvas</a></li>
+                                        <li class="menu-item menu-item--collapsed"><a href="mailto:support@instructure.com">Help
+                                                designing your Canvas course</a></li>
                                         <li class="menu-item menu-item--collapsed"><a href="https://it.cornell.edu/canvas/">Blackboard
-                                                to Canvas Migration </a></li>
-
+                                                to Canvas migration </a></li>
                                     </ul>
                                 </li>
                             </ul>
-
                         </div>
                     </nav>
                 </div>
@@ -125,7 +83,9 @@
                                 <a class='link-button' href='https://cornell.instructure.com/login/canvas'>Guest</a>
                             </p>
                             <p>
-                                <!--h3 class='black-text'>Security Notice:</h3 --> Security Notice - to assure that no one can connect to Canvas using your account, Logout from Canvas and Exit / Quit the browser application. <a class='dark-color' href='http://www.cit.cornell.edu/services/identity/cuweblogin/more.html'>Clearing your CUWebLogin credentials</a>
+                                Security Notice - to assure that no one can connect to Canvas using your account,
+                                Logout from Canvas and Exit / Quit the browser application. <a class='dark-color' href='http://www.cit.cornell.edu/services/identity/cuweblogin/more.html'>Clearing
+                                    your CUWebLogin credentials</a>
                             </p>
                         </div>
                         <div id='terms_of_use'>
@@ -159,9 +119,6 @@
                     </section>
                 </article>
                 <div id="sidebar-bottom" class="secondary" role="complementary">
-                    <!--div class="content-block">
-                        <a href="mailto:canvas@cornell.edu" class="contact-us light">Contact Us</a>
-                    </div-->
                     <div id=spotlight>
                         <!-- load dynamic content here -->
                     </div>
